--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
   "type": "commonjs",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon dist/index.ts",
-    "dev": "nodemon src/index.ts"
+    "format": "prettier --write \"src/**/*.{ts,js}\"",
+    "start": "nodemon src/index.ts"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -45,6 +44,7 @@
   "devDependencies": {
     "@types/pdfkit": "^0.13.9",
     "@types/qrcode": "^1.5.5",
+    "prettier": "^3.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
